--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="carousel-inner">
                     <div class="item active">
                         <a href="https://studio.code.org/projects/gamelab/Sdt_OgR8VajkwZ9t45UeVtzMLGiyqhNFJexB9eCe480" target="_blank">
-                            <img src="game1.png">
+                            <img src="https://github.com/Ayyan1235/Project-67/blob/main/game1.png?raw=true">
                         </a>
                         <p>Car Racing</p>
                     </div>
