--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <div class="item">
                         <a href="https://studio.code.org/projects/gamelab/N25kriFEAiBTZwfbYpDjc_qryNjSBhYW-3fOuYRt_SI" target="_blank">
-                            <img src="game2.png">
+                            <img src="https://github.com/Ayyan1235/Project-67/blob/main/game2.png?raw=true">
                         </a>
                         <p>Be in space</p>
                     </div>
@@ -48,7 +48,7 @@
                       <div class="item">
                         <a href="https://studio.code.org/projects/playlab/Xoq31TZJRl0W9K95JthlADu6tbI1xGTsVHpOvYsNtuE" target="_blank">
                             <!--add the source of the image as "game3.PNG"-->
-                            <img src="game3.PNG">
+                            <img src="https://github.com/Ayyan1235/Project-67/blob/main/game3.PNG?raw=true">
                         </a>
                         <p>Bird hunting for pie</p>
                     </div>
@@ -58,7 +58,7 @@
                         "https://studio.code.org/projects/playlab/WzncdAxXTuhs9JIxkX2v6qScTqL5bBzoUdfsqrxF4fI"
                          in href part  -->
                         <a href="https://studio.code.org/projects/playlab/WzncdAxXTuhs9JIxkX2v6qScTqL5bBzoUdfsqrxF4fI" target="_blank">
-                           <img src="game4.PNG">
+                           <img src="https://github.com/Ayyan1235/Project-67/blob/main/game4.PNG?raw=true">
                         </a>
                         <p>Password Checker</p>
                     </div>
